@@ -72,6 +72,8 @@ namespace WebCore {
         void forbidExecution();
         bool isExecutionForbidden() const;
 
+        void disableEval();
+
         // Returns WorkerScriptController for the currently executing context. 0 will be returned if the current executing context is not the worker context.
         static WorkerScriptController* controllerForContext();
 
